--- a/src/automatic-basket-01.html
+++ b/src/automatic-basket-01.html
@@ -7,7 +7,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>ЭA - Корзина</title>
+	<title>ЭA - Корзина. Шаг 1</title>
 	<!--Mobile optimized-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.2">
 	<!--Theme color-->
@@ -96,12 +96,12 @@
 					<div class="header__row header__row--arrow">
 						<div class="header__cell">
 							<a href="#" class="down-arrows move-next-section-js">
-					<span class="down-arrow__align">
+								<span class="down-arrow__align">
 						<span>&nbsp;</span>
-						<span>&nbsp;</span>
-						<span>&nbsp;</span>
-					</span>
-					</a>
+								<span>&nbsp;</span>
+								<span>&nbsp;</span>
+								</span>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -950,136 +950,138 @@
 										</ul>
 										<!--order steps end-->
 									</div>
-									<div class="layout-wide">
-										<!--products basket-->
-										<div class="products-basket">
-											<section class="products-basket__list">
-												<header class="products-basket__item products-basket__head">
-													<div class="products-basket__cell products-basket__product">Наименование</div>
-													<div class="products-basket__cell products-basket__price">Цена, руб.</div>
-													<div class="products-basket__cell products-basket__amount">Количество, шт.</div>
-													<div class="products-basket__cell products-basket__sum">Сумма, руб.</div>
-													<div class="products-basket__cell products-basket__remove">&nbsp;</div>
-												</header>
-												<article class="products-basket__item">
-													<div class="products-basket__cell products-basket__product">
-														<a href="automatic-card.html" class="products-basket__figure">
-															<div class="products-basket__img">
-																<img src="img/img-products-01.jpg" alt="Номинальный ток на стороне ВН для присоединения линий" />
-															</div>
-														</a>
-														<div class="products-basket__title"><a href="automatic-card.html">Номинальный ток на стороне ВН для присоединения линий</a></div>
-													</div>
-													<div class="products-basket__cell products-basket__price" data-label="Цена, руб">
-														<div class="products-basket__align">
-															<div class="cur">300</div>
+									<form action="automatic-basket-02.html" method="post">
+										<div class="layout-wide">
+											<!--products basket-->
+											<div class="products-basket">
+												<section class="products-basket__list">
+													<header class="products-basket__item products-basket__head">
+														<div class="products-basket__cell products-basket__product">Наименование</div>
+														<div class="products-basket__cell products-basket__price">Цена, руб.</div>
+														<div class="products-basket__cell products-basket__amount">Количество, шт.</div>
+														<div class="products-basket__cell products-basket__sum">Сумма, руб.</div>
+														<div class="products-basket__cell products-basket__remove">&nbsp;</div>
+													</header>
+													<article class="products-basket__item">
+														<div class="products-basket__cell products-basket__product">
+															<a href="automatic-card.html" class="products-basket__figure">
+																<div class="products-basket__img">
+																	<img src="img/img-products-01.jpg" alt="Номинальный ток на стороне ВН для присоединения линий" />
+																</div>
+															</a>
+															<div class="products-basket__title"><a href="automatic-card.html">Номинальный ток на стороне ВН для присоединения линий</a></div>
 														</div>
-													</div>
-													<div class="products-basket__cell products-basket__amount" data-label="Количество, шт.">
-														<div class="products-basket__align">
-															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="2" data-only-number>
+														<div class="products-basket__cell products-basket__price" data-label="Цена, руб">
+															<div class="products-basket__align">
+																<div class="cur">300</div>
 															</div>
 														</div>
-													</div>
-													<div class="products-basket__cell products-basket__sum" data-label="Сумма, руб">
-														<div class="products-basket__align">
-															<div class="cur">300</div>
-														</div>
-													</div>
-													<div class="products-basket__cell products-basket__remove" data-label="&nbsp;">
-														<div class="products-basket__align">
-															<a href="#" class="btn-remove" title="Удалить">
-				<i class="depict-remove">&nbsp;</i>
-				<span>Удалить</span>
-			</a>
-														</div>
-													</div>
-												</article>
-												<article class="products-basket__item">
-													<div class="products-basket__cell products-basket__product">
-														<a href="automatic-card.html" class="products-basket__figure">
-															<div class="products-basket__img">
-																<img src="img/img-products-02.jpg" alt="Используемые аппараты: РВ; ВН; вакуумные выключатели VF, Evolis, Sion, BB/TEL и т.д.; рубильники РБ, РЕ, ВР и т.д.; выключатели ВА, Siemens, Schneider Electric, АВВ и другие" />
-															</div>
-														</a>
-														<div class="products-basket__title"><a href="automatic-card.html">Используемые аппараты: РВ; ВН; вакуумные выключатели VF, Evolis, Sion, BB/TEL и т.д.; рубильники РБ, РЕ, ВР и т.д.; выключатели ВА, Siemens, Schneider Electric, АВВ и другие</a></div>
-													</div>
-													<div class="products-basket__cell products-basket__price" data-label="Цена, руб">
-														<div class="products-basket__align">
-															<div class="cur">1 300</div>
-														</div>
-													</div>
-													<div class="products-basket__cell products-basket__amount" data-label="Количество, шт.">
-														<div class="products-basket__align">
-															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="1" data-only-number>
+														<div class="products-basket__cell products-basket__amount" data-label="Количество, шт.">
+															<div class="products-basket__align">
+																<div class="spinner">
+																	<input class="spinner-js" type="text" name="value" value="2" data-only-number>
+																</div>
 															</div>
 														</div>
-													</div>
-													<div class="products-basket__cell products-basket__sum" data-label="Сумма, руб">
-														<div class="products-basket__align">
-															<div class="cur">1 300</div>
-														</div>
-													</div>
-													<div class="products-basket__cell products-basket__remove" data-label="&nbsp;">
-														<div class="products-basket__align">
-															<a href="#" class="btn-remove" title="Удалить">
-				<i class="depict-remove">&nbsp;</i>
-				<span>Удалить</span>
-			</a>
-														</div>
-													</div>
-												</article>
-												<article class="products-basket__item">
-													<div class="products-basket__cell products-basket__product">
-														<a href="automatic-card.html" class="products-basket__figure">
-															<div class="products-basket__img">
-																<img src="img/__temp-img-content-carousel-01.jpg" alt="2Кабель силовой бронированный АВБбШв и ААБл" />
-															</div>
-														</a>
-														<div class="products-basket__title"><a href="automatic-card.html">2Кабель силовой бронированный АВБбШв и ААБл</a></div>
-													</div>
-													<div class="products-basket__cell products-basket__price" data-label="Цена, руб">
-														<div class="products-basket__align">
-															<div class="cur">56 738 300</div>
-														</div>
-													</div>
-													<div class="products-basket__cell products-basket__amount" data-label="Количество, шт.">
-														<div class="products-basket__align">
-															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="8" data-only-number>
+														<div class="products-basket__cell products-basket__sum" data-label="Сумма, руб">
+															<div class="products-basket__align">
+																<div class="cur">300</div>
 															</div>
 														</div>
-													</div>
-													<div class="products-basket__cell products-basket__sum" data-label="Сумма, руб">
-														<div class="products-basket__align">
-															<div class="cur">56 738 300</div>
+														<div class="products-basket__cell products-basket__remove" data-label="&nbsp;">
+															<div class="products-basket__align">
+																<a href="#" class="btn-remove" title="Удалить">
+																	<i class="depict-remove">&nbsp;</i>
+																	<span>Удалить</span>
+																</a>
+															</div>
 														</div>
-													</div>
-													<div class="products-basket__cell products-basket__remove" data-label="&nbsp;">
-														<div class="products-basket__align">
-															<a href="#" class="btn-remove" title="Удалить">
-				<i class="depict-remove">&nbsp;</i>
-				<span>Удалить</span>
-			</a>
+													</article>
+													<article class="products-basket__item">
+														<div class="products-basket__cell products-basket__product">
+															<a href="automatic-card.html" class="products-basket__figure">
+																<div class="products-basket__img">
+																	<img src="img/img-products-02.jpg" alt="Используемые аппараты: РВ; ВН; вакуумные выключатели VF, Evolis, Sion, BB/TEL и т.д.; рубильники РБ, РЕ, ВР и т.д.; выключатели ВА, Siemens, Schneider Electric, АВВ и другие" />
+																</div>
+															</a>
+															<div class="products-basket__title"><a href="automatic-card.html">Используемые аппараты: РВ; ВН; вакуумные выключатели VF, Evolis, Sion, BB/TEL и т.д.; рубильники РБ, РЕ, ВР и т.д.; выключатели ВА, Siemens, Schneider Electric, АВВ и другие</a></div>
 														</div>
-													</div>
-												</article>
-											</section>
-										</div>
-										<div class="product-basket__total">
-											<div class="label">Итого:</div>
-											<div class="total-price">84 937 руб. (без НДС)</div>
-										</div>
-										<div class="product-basket__footer">
-											<div class="arr-wrap">
-												<a href="automatic-basket-02.html" class="btn-outline"><i>&nbsp;</i><span>Оформить заказ</span></a>
-												<a href="automatic-catalog.html" class="btn-outline-alt btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
+														<div class="products-basket__cell products-basket__price" data-label="Цена, руб">
+															<div class="products-basket__align">
+																<div class="cur">1 300</div>
+															</div>
+														</div>
+														<div class="products-basket__cell products-basket__amount" data-label="Количество, шт.">
+															<div class="products-basket__align">
+																<div class="spinner">
+																	<input class="spinner-js" type="text" name="value" value="1" data-only-number>
+																</div>
+															</div>
+														</div>
+														<div class="products-basket__cell products-basket__sum" data-label="Сумма, руб">
+															<div class="products-basket__align">
+																<div class="cur">1 300</div>
+															</div>
+														</div>
+														<div class="products-basket__cell products-basket__remove" data-label="&nbsp;">
+															<div class="products-basket__align">
+																<a href="#" class="btn-remove" title="Удалить">
+																	<i class="depict-remove">&nbsp;</i>
+																	<span>Удалить</span>
+																</a>
+															</div>
+														</div>
+													</article>
+													<article class="products-basket__item">
+														<div class="products-basket__cell products-basket__product">
+															<a href="automatic-card.html" class="products-basket__figure">
+																<div class="products-basket__img">
+																	<img src="img/__temp-img-content-carousel-01.jpg" alt="2Кабель силовой бронированный АВБбШв и ААБл" />
+																</div>
+															</a>
+															<div class="products-basket__title"><a href="automatic-card.html">2Кабель силовой бронированный АВБбШв и ААБл</a></div>
+														</div>
+														<div class="products-basket__cell products-basket__price" data-label="Цена, руб">
+															<div class="products-basket__align">
+																<div class="cur">56 738 300</div>
+															</div>
+														</div>
+														<div class="products-basket__cell products-basket__amount" data-label="Количество, шт.">
+															<div class="products-basket__align">
+																<div class="spinner">
+																	<input class="spinner-js" type="text" name="value" value="8" data-only-number>
+																</div>
+															</div>
+														</div>
+														<div class="products-basket__cell products-basket__sum" data-label="Сумма, руб">
+															<div class="products-basket__align">
+																<div class="cur">56 738 300</div>
+															</div>
+														</div>
+														<div class="products-basket__cell products-basket__remove" data-label="&nbsp;">
+															<div class="products-basket__align">
+																<a href="#" class="btn-remove" title="Удалить">
+																	<i class="depict-remove">&nbsp;</i>
+																	<span>Удалить</span>
+																</a>
+															</div>
+														</div>
+													</article>
+												</section>
 											</div>
+											<div class="product-basket__total">
+												<div class="label">Итого:</div>
+												<div class="total-price">84 937 руб. (без НДС)</div>
+											</div>
+											<div class="product-basket__footer">
+												<div class="arr-wrap">
+													<a href="automatic-basket-02.html" class="btn-outline"><i>&nbsp;</i><span>Оформить заказ</span></a>
+													<a href="automatic-catalog.html" class="btn-outline-alt btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
+												</div>
+											</div>
+											<!--products basket end-->
 										</div>
-										<!--products basket end-->
-									</div>
+									</form>
 								</div>
 							</div>
 						</div>
