--- a/src/automatic-catalog.html
+++ b/src/automatic-catalog.html
@@ -34,6 +34,12 @@
 	<link rel="stylesheet" href="css/main.css">
 	<!--Modernizr-->
 	<script src="js/modernizr.min.js"></script>
+	<script>
+		var addToCartMsg = {
+			'title': 'Корзина',
+			'text': 'Количество товара обновлено'
+		}
+	</script>
 </head>
 
 <body class="ea-site ea-has-catalog-menu">
